# Xhat

./: .gitignore  IDEIA.md  README.md  instala.sh  pyproject.toml  requirements.txt
xhat/: __init__.py  __main__.py  brain.py  choices.py  cli.py  config.py  executor.py  llm.py  memory.py  models.py  navigate.py  ollama_runtime.py  prompts.py  search.py  single_shot.py  tui.py  tui.tcss  ui_widgets.py  workdir.py
